fix response api connect product api
